--- a/project.css
+++ b/project.css
@@ -21,7 +21,7 @@
     margin-top: 75px;
 }
 .body {
-    background-color: orange; 
+    background-image: url(gmi/fon22.jpg); 
 }
 #metka {
     color: purple
